fixed some caps

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Ways-javascript by portapipe</title>
+    <title>WAYS-Javascript by portapipe</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Ways-javascript</h1>
-        <h2>[WAYS] Write As You Speak - Javascript Edition</h2>
+        <h1>WAYS - Write As You Speak</h1>
+        <h2>Javascript Edition</h2>
 
         <section id="downloads">
           <a href="https://github.com/portapipe/WAYS-Javascript/zipball/master" class="btn">Download as .zip</a>
@@ -47,7 +47,7 @@ In the next future when all the function are done I'll start to think how to mak
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What's the future of 'WAYS'?</h3>
 
-<p>portapipe (<a href="https://github.com/portapipe" class="user-mention">@portapipe</a>) will code the main class until lots of stuff will be added, THEN he'll start to think on how to integrate it into a cool and easy-for-all WAYS language (Write As You Speak), so plain English will be the main core of the language. The <a href="https://github.com/portapipe/WAYS-Javascript/wiki/Documentation">Documentation</a> will help you to find out what you need to code without pain.
+<p><a href="https://github.com/portapipe" class="user-mention">@portapipe</a> will code the main class until lots of stuff will be added, THEN he'll start to think on how to integrate it into a cool and easy-for-all WAYS language (Write As You Speak), so plain English will be the main core of the language. The <a href="https://github.com/portapipe/WAYS-Javascript/wiki/Documentation">Documentation</a> will help you to find out what you need to code without pain.
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
