--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2>Javascript Edition</h2>
 
         <section id="downloads">
+          <a href="https://github.com/portapipe/WAYS-Javascript/wiki/Documentation" class="btn">Documentation</a>
           <a href="https://github.com/portapipe/WAYS-Javascript/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/portapipe/WAYS-Javascript/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/portapipe/WAYS-Javascript" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
